src-tauri/src/c/inc/ControlCANFDx64.h

typedef struct {
UINT	can_id;  /*  32 bit MAKE_CAN_ID + EFF/RTR/ERR flags */
BYTE    can_dlc; /*  frame payload length in byte (0 .. CAN_MAX_DLEN) */
BYTE    __pad;   /*  padding */
BYTE    __res0;  /*  reserved / padding */ 
BYTE    __res1;  /*  reserved / padding */
BYTE    data[CAN_MAX_DLEN]/* __attribute__((aligned(8)))*/;
}can_frame;
typedef struct {
UINT    can_id;  /*  32 bit MAKE_CAN_ID + EFF/RTR/ERR flags */
BYTE    len;     /*  frame payload length in byte */
BYTE    flags;   /*  additional flags for CAN FD,i.e error code */
BYTE    __res0;  /*  reserved / padding */
BYTE    __res1;  /*  reserved / padding */
BYTE    data[CANFD_MAX_DLEN]/* __attribute__((aligned(8)))*/;
}canfd_frame;
typedef struct tagZCAN_DEVICE_INFO {
USHORT hw_Version;
USHORT fw_Version;
USHORT dr_Version;
USHORT in_Version;
USHORT irq_Num;
BYTE   can_Num;
UCHAR  str_Serial_Num[20];
UCHAR  str_hw_Type[40];
USHORT reserved[4];
}ZCAN_DEVICE_INFO;
typedef struct tagZCAN_CHANNEL_INIT_CONFIG {
UINT can_type; // type:TYPE_CAN(0) TYPE_CANFD(1)
union
{
struct
{
UINT  acc_code;
UINT  acc_mask;
UINT  reserved;
BYTE  filter;
BYTE  timing0;
BYTE  timing1;
BYTE  mode;
}can;
struct
{
UINT   acc_code;
UINT   acc_mask;
UINT   abit_timing;
UINT   dbit_timing;
UINT   brp;
BYTE   filter;
BYTE   mode;
USHORT pad;
UINT   reserved;
}canfd;
};
}ZCAN_CHANNEL_INIT_CONFIG;
typedef struct tagZCAN_Transmit_Data
{
can_frame frame;
UINT transmit_type;
}ZCAN_Transmit_Data;
typedef struct tagZCAN_Receive_Data
{
can_frame frame;
UINT64    timestamp;// us
}ZCAN_Receive_Data;
typedef struct tagZCAN_TransmitFD_Data
{
canfd_frame frame;
UINT transmit_type;
}ZCAN_TransmitFD_Data;
typedef struct tagZCAN_ReceiveFD_Data
{
canfd_frame frame;
UINT64      timestamp;// us
}ZCAN_ReceiveFD_Data;