src-tauri/src/models/WSFdCan/fdcan_c.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of canfd_frame"][::std::mem::size_of::<canfd_frame>() - 72usize];
    ["Alignment of canfd_frame"][::std::mem::align_of::<canfd_frame>() - 4usize];
    ["Offset of field: canfd_frame::can_id"][::std::mem::offset_of!(canfd_frame, can_id) - 0usize];
    ["Offset of field: canfd_frame::len"][::std::mem::offset_of!(canfd_frame, len) - 4usize];
    ["Offset of field: canfd_frame::flags"][::std::mem::offset_of!(canfd_frame, flags) - 5usize];
    ["Offset of field: canfd_frame::__res0"][::std::mem::offset_of!(canfd_frame, __res0) - 6usize];
    ["Offset of field: canfd_frame::__res1"][::std::mem::offset_of!(canfd_frame, __res1) - 7usize];
    ["Offset of field: canfd_frame::data"][::std::mem::offset_of!(canfd_frame, data) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tagZCAN_DEVICE_INFO {
    pub hw_Version: USHORT,
    pub fw_Version: USHORT,
    pub dr_Version: USHORT,
    pub in_Version: USHORT,
    pub irq_Num: USHORT,
    pub can_Num: BYTE,
    pub str_Serial_Num: [UCHAR; 20usize],
    pub str_hw_Type: [UCHAR; 40usize],
    pub reserved: [USHORT; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of tagZCAN_DEVICE_INFO"][::std::mem::size_of::<tagZCAN_DEVICE_INFO>() - 80usize];
    ["Alignment of tagZCAN_DEVICE_INFO"][::std::mem::align_of::<tagZCAN_DEVICE_INFO>() - 2usize];
    ["Offset of field: tagZCAN_DEVICE_INFO::hw_Version"]
        [::std::mem::offset_of!(tagZCAN_DEVICE_INFO, hw_Version) - 0usize];
    ["Offset of field: tagZCAN_DEVICE_INFO::fw_Version"]
        [::std::mem::offset_of!(tagZCAN_DEVICE_INFO, fw_Version) - 2usize];
    ["Offset of field: tagZCAN_DEVICE_INFO::dr_Version"]
        [::std::mem::offset_of!(tagZCAN_DEVICE_INFO, dr_Version) - 4usize];
    ["Offset of field: tagZCAN_DEVICE_INFO::in_Version"]
        [::std::mem::offset_of!(tagZCAN_DEVICE_INFO, in_Version) - 6usize];
    ["Offset of field: tagZCAN_DEVICE_INFO::irq_Num"]
        [::std::mem::offset_of!(tagZCAN_DEVICE_INFO, irq_Num) - 8usize];
    ["Offset of field: tagZCAN_DEVICE_INFO::can_Num"]
        [::std::mem::offset_of!(tagZCAN_DEVICE_INFO, can_Num) - 10usize];
    ["Offset of field: tagZCAN_DEVICE_INFO::str_Serial_Num"]
        [::std::mem::offset_of!(tagZCAN_DEVICE_INFO, str_Serial_Num) - 11usize];
    ["Offset of field: tagZCAN_DEVICE_INFO::str_hw_Type"]
        [::std::mem::offset_of!(tagZCAN_DEVICE_INFO, str_hw_Type) - 31usize];
    ["Offset of field: tagZCAN_DEVICE_INFO::reserved"]
        [::std::mem::offset_of!(tagZCAN_DEVICE_INFO, reserved) - 72usize];
};
pub type ZCAN_DEVICE_INFO = tagZCAN_DEVICE_INFO;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct tagZCAN_CHANNEL_INIT_CONFIG {
    pub can_type: UINT,
    pub __bindgen_anon_1: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1 {
    pub can: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1,
    pub canfd: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1 {
    pub acc_code: UINT,
    pub acc_mask: UINT,
    pub reserved: UINT,
    pub filter: BYTE,
    pub timing0: BYTE,
    pub timing1: BYTE,
    pub mode: BYTE,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1"][::std::mem::size_of::<
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1,
    >() - 16usize];
    ["Alignment of tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1"][::std::mem::align_of::<
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1,
    >() - 4usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1::acc_code"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1,
        acc_code
    )
        - 0usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1::acc_mask"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1,
        acc_mask
    )
        - 4usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1::reserved"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1,
        reserved
    )
        - 8usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1::filter"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1,
        filter
    )
        - 12usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1::timing0"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1,
        timing0
    )
        - 13usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1::timing1"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1,
        timing1
    )
        - 14usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1::mode"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_1,
        mode
    ) - 15usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2 {
    pub acc_code: UINT,
    pub acc_mask: UINT,
    pub abit_timing: UINT,
    pub dbit_timing: UINT,
    pub brp: UINT,
    pub filter: BYTE,
    pub mode: BYTE,
    pub pad: USHORT,
    pub reserved: UINT,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2"][::std::mem::size_of::<
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2,
    >() - 28usize];
    ["Alignment of tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2"][::std::mem::align_of::<
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2,
    >() - 4usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2::acc_code"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2,
        acc_code
    )
        - 0usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2::acc_mask"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2,
        acc_mask
    )
        - 4usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2::abit_timing"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2,
        abit_timing
    )
        - 8usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2::dbit_timing"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2,
        dbit_timing
    )
        - 12usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2::brp"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2,
        brp
    ) - 16usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2::filter"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2,
        filter
    )
        - 20usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2::mode"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2,
        mode
    ) - 21usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2::pad"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2,
        pad
    ) - 22usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2::reserved"][::std::mem::offset_of!(
        tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1__bindgen_ty_2,
        reserved
    )
        - 24usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1"]
        [::std::mem::size_of::<tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1>() - 28usize];
    ["Alignment of tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1"]
        [::std::mem::align_of::<tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1>() - 4usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1::can"]
        [::std::mem::offset_of!(tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1, can) - 0usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1::canfd"]
        [::std::mem::offset_of!(tagZCAN_CHANNEL_INIT_CONFIG__bindgen_ty_1, canfd) - 0usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of tagZCAN_CHANNEL_INIT_CONFIG"]
        [::std::mem::size_of::<tagZCAN_CHANNEL_INIT_CONFIG>() - 32usize];
    ["Alignment of tagZCAN_CHANNEL_INIT_CONFIG"]
        [::std::mem::align_of::<tagZCAN_CHANNEL_INIT_CONFIG>() - 4usize];
    ["Offset of field: tagZCAN_CHANNEL_INIT_CONFIG::can_type"]
        [::std::mem::offset_of!(tagZCAN_CHANNEL_INIT_CONFIG, can_type) - 0usize];
};
pub type ZCAN_CHANNEL_INIT_CONFIG = tagZCAN_CHANNEL_INIT_CONFIG;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tagZCAN_Transmit_Data {
    pub frame: can_frame,
    pub transmit_type: UINT,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of tagZCAN_Transmit_Data"][::std::mem::size_of::<tagZCAN_Transmit_Data>() - 20usize];
    ["Alignment of tagZCAN_Transmit_Data"]
        [::std::mem::align_of::<tagZCAN_Transmit_Data>() - 4usize];
    ["Offset of field: tagZCAN_Transmit_Data::frame"]
        [::std::mem::offset_of!(tagZCAN_Transmit_Data, frame) - 0usize];
    ["Offset of field: tagZCAN_Transmit_Data::transmit_type"]
        [::std::mem::offset_of!(tagZCAN_Transmit_Data, transmit_type) - 16usize];
};
pub type ZCAN_Transmit_Data = tagZCAN_Transmit_Data;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tagZCAN_Receive_Data {
    pub frame: can_frame,
    pub timestamp: UINT64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of tagZCAN_Receive_Data"][::std::mem::size_of::<tagZCAN_Receive_Data>() - 24usize];
    ["Alignment of tagZCAN_Receive_Data"][::std::mem::align_of::<tagZCAN_Receive_Data>() - 8usize];
    ["Offset of field: tagZCAN_Receive_Data::frame"]
        [::std::mem::offset_of!(tagZCAN_Receive_Data, frame) - 0usize];
    ["Offset of field: tagZCAN_Receive_Data::timestamp"]
        [::std::mem::offset_of!(tagZCAN_Receive_Data, timestamp) - 16usize];
};
pub type ZCAN_Receive_Data = tagZCAN_Receive_Data;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tagZCAN_TransmitFD_Data {
    pub frame: canfd_frame,
    pub transmit_type: UINT,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of tagZCAN_TransmitFD_Data"][::std::mem::size_of::<tagZCAN_TransmitFD_Data>() - 76usize];
    ["Alignment of tagZCAN_TransmitFD_Data"]
        [::std::mem::align_of::<tagZCAN_TransmitFD_Data>() - 4usize];
    ["Offset of field: tagZCAN_TransmitFD_Data::frame"]
        [::std::mem::offset_of!(tagZCAN_TransmitFD_Data, frame) - 0usize];
    ["Offset of field: tagZCAN_TransmitFD_Data::transmit_type"]
        [::std::mem::offset_of!(tagZCAN_TransmitFD_Data, transmit_type) - 72usize];
};
pub type ZCAN_TransmitFD_Data = tagZCAN_TransmitFD_Data;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tagZCAN_ReceiveFD_Data {
    pub frame: canfd_frame,
    pub timestamp: UINT64,
}
